k8s/resources/s1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-s1-deploy
spec:
  replicas: 2

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: test-s1
  template:
    metadata:
      labels:
        app: test-s1
    spec:
      containers:
        - name: test-s1
          image: test-s1:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
            failureThreshold: 3
