k8s/resources/s1-service.yaml
# k8s/ping-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-s1-service
spec:
  selector:
    app: test-s1
  ports:
    - port: 80
      targetPort: 8080
